styles/Pizza.css
@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,900|Roboto:400,500,900&display=swap');
.pizza{
    padding-top: 0px;
    width: 800px;
    height: 143px;
    display: grid;
    grid-template-columns: 318px 285.21px 216.14px;
    border-radius: 10px;
    background: white;
}

.pizza__orderDetails {
    display: grid;
    grid-template-columns: 2fr 50px 3fr;
    height: 143px;
}

.pizza__imageBlob{
    background-color: #FCBD10;
    width: 318px;
    height: 143px;
    border-radius: 10px 0px 0px 10px;
    overflow: hidden;
}

.pizza__image{
    margin-left: 31.62px;
}

.pizza__info{
    display:grid;
    grid-template-rows: auto auto;
    margin-left: 25.52px;
    row-gap: 14px;
}

.pizza__infoTitle{
    align-self: end;
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 900;
    font-size: 21.7244px;
    color: #02435A;
}

.pizza__infoIngredients{
    align-self: start;
    font-family: 'Roboto Slab', serif;
    font-style: normal;
    font-weight: normal;
    font-size: 12px;
}

.pizza__small, .pizza__large{
    display:grid;
    grid-template-rows: repeat(2,auto);
    row-gap: 15px;
}

.pizza__smallSize{
    justify-self: end;
    align-self: end;
    margin-bottom: 0;
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 300;
    font-size: 17.9659px;
    color: #02435A;
    margin-bottom: auto;
    margin-top: 39.46px;
}

.pizza__spacer{
    height: 45%;
    justify-self: center;
    align-self: center;
    width: 1px;
    border-right: solid 1px #02435A;
}

.pizza__largeSize{
    justify-self: start;
    align-self: end;
    margin-bottom: 0;
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 300;
    font-size: 17.9659px;
    color: #02435A;
    margin-bottom: auto;
    margin-top: 39.46px;
}

.pizza__smallPrice{
    justify-self: end;
    align-self: start;
    margin-top: 0;
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 21.7244px;
    color: #02435A;
    margin-bottom: 41.04px;
    margin-top: auto;
}

.pizza__largePrice{
    justify-self: start;
    align-self: start;
    margin-top: 0;
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 21.7244px;
    color: #02435A;
    margin-bottom: 41.04px;
    margin-top: auto;
}

@media screen and (max-width: 950px) {
    .pizza__smallSize, .pizza__largeSize {
        font-size: 14px;
    }
    .pizza__smallPrice, .pizza__largePrice {
        font-size: 16px;
    }
    .pizza {
        height: 253px;
        width: 301px;
        grid-template-columns: 100%;
        grid-template-rows: 109px min-content min-content;
        display: none;
    }
    .pizza:first-child,.pizza:nth-child(2) {
        display: grid;
    }
    .pizza__infoIngredients {
        margin-bottom: 0px;
    }
    .pizza__imageBlob {
        width: 100%;
        height: 100%;
        border-radius: 10px 10px 0px 0px;
    }
    .pizza__image {
        width: auto;
        height: 143px;
        margin-left: -114px;
        margin-top: 13px;
    }
    .pizza__info {
        grid-template-rows: 35px auto;
        height: 100%;
        margin-left: 20px;
    }
    .pizza__infoTitle {
        margin-top: 16px;
        margin-bottom: 0px;
        font-size: 16px;
    }
    .pizza__orderDetails {
        height: 100%;
        grid-template-columns: repeat(3, min-content);
        column-gap: 15px;
        margin-left: 20px;
        margin-top: 15px;
    }
    .pizza__small, .pizza__large, .pizza__spacer {
        height: 38.28px;
    }
    .pizza__largeSize, .pizza__largePrice, .pizza__smallPrice, .pizza__smallSize {
        margin: 0px;
    }
    .pizza__small, .pizza__large {
        row-gap: 6.4px;
    }
}

@media screen and (max-width: 660px) {
    .pizza:nth-child(2) {
        display: none;
    }
}

@media screen and (max-width: 340px) {
    .pizza {
        width: 100%;
    }
}

